<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="360dp"
    android:orientation="vertical"
    android:padding="@dimen/medium_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_a_new_part_title"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/regular_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/add_part_name_hint"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/part_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:hint="@string/name"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/regular_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/add_part_duration_hint"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/duration_value_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:lines="1"
            android:text="@string/_1" />

        <Spinner
            android:id="@+id/duration_unit_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/extra_inner_margin"
            android:layout_weight="1"
            android:padding="@dimen/regular_margin"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@drawable/text_accent_selector" />

        <TextView
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/regular_margin"
            android:text="@string/accept"
            android:textAllCaps="true"
            android:textColor="@drawable/text_accent_selector"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>