<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dariomartin.crossapp.view.activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"
        android:contentDescription="@string/login_back_drop_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_logo_height"
            android:layout_marginTop="@dimen/login_logo_width"
            app:srcCompat="@drawable/ic_login_logo"
            android:contentDescription="@string/app_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/app_name_text_size" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/medium_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:paddingStart="@dimen/medium_margin"
            android:paddingTop="@dimen/medium_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textSize="@dimen/body_text_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/body_text_size"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/email_sign_in_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/extra_inner_margin"
            android:text="@string/action_sign_in" />

    </LinearLayout>

</RelativeLayout>
