<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dariomartin.crossapp.view.activities.AddExerciseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/external_padding">

        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_size"
            tools:text="Exercise Name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/exercise_intensity_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/small_title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_inner_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/intensity_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:lines="1"
                android:text="@string/_1" />

            <Spinner
                android:id="@+id/intensity_unit_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

            <EditText
                android:id="@+id/exercise_reps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:lines="1"
                android:text="@string/one" />

            <TextView
                android:layout_width="wrap_content"
                style="?android:attr/spinnerDropDownItemStyle"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/reps" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/select_a_workout"
            android:textColor="@color/white"
            android:textSize="@dimen/small_title_text_size" />

        <Spinner
            android:id="@+id/workouts_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_inner_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/select_a_parts"
            android:textColor="@color/white"
            android:textSize="@dimen/small_title_text_size" />

        <LinearLayout
            android:id="@+id/parts_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/add_and_finish_button"
        style="@style/BlueButton"
        android:text="@string/add"/>

</LinearLayout>
