<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dariomartin.crossapp.view.activities.TrainingActivity">

    <LinearLayout
        android:id="@+id/timer_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/exercise_detail_header_size"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/regular_margin"
            android:text="@string/initial_time"
            android:textColor="@color/white"
            android:textSize="@dimen/main_clock_text_size" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/clock_play"
                android:layout_width="@dimen/play_icon_size"
                android:layout_height="@dimen/play_icon_size"
                app:srcCompat="@drawable/ic_play"
                android:contentDescription="@string/clock_start"/>

            <ImageView
                android:id="@+id/clock_pause"
                android:layout_width="@dimen/play_icon_size"
                android:layout_height="@dimen/play_icon_size"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_pause"
                android:contentDescription="@string/clock_pause"/>
        </RelativeLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_container" />

</android.support.constraint.ConstraintLayout>
